--- a/galeria.html
+++ b/galeria.html
@@ -10,11 +10,145 @@
 </head>
 <body>
     
-    
+    <div class="container">
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="imagenes/logo.png" alt="No Encontrado" width="150" height="80" />
+                </a>
+                <h3 style="font-size: 100%; margin-top: 8px;">Tecnologías Arcadia</h3>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link   text-center" href="login.html">
+                            <button type="button" class="btn btn-link">Iniciar Sesión</button>
+                        </a>
+                        <a class="nav-link   text-center" href="galeria.html">
+                            <button type="button" class="btn btn-link">Galería</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
+    </div>
 
     <main>
 
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
+        <div class="container">
+            <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">1</h5>
+                      <p class="card-text" align="center">1</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">2</h5>
+                      <p class="card-text" align="center">2</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">3</h5>
+                      <p class="card-text" align="center">3</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">4</h5>
+                      <p class="card-text" align="center">4</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">5</h5>
+                      <p class="card-text" align="center">5</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title" align="center">6</h5>
+                      <p class="card-text" align="center">6</p>
+                    </div>
+                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <div>
+                        <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
+                        <label style="float: right; margin-right: 10px;">Cantidad: </label>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
