--- a/index.html
+++ b/index.html
@@ -10,11 +10,113 @@
 </head>
 <body>
     
-    
+    <div class="container">
 
-    <main>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img src="imagenes/logo.png" alt="No Encontrado" width="150" height="80" />
+                </a>
+                <h3 style="font-size: 100%; margin-top: 8px;">Tecnologías Arcadia</h3>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link   text-center" href="login.html">
+                            <button type="button" class="btn btn-link">Iniciar Sesión</button>
+                        </a>
+                        <a class="nav-link   text-center" href="galeria.html">
+                            <button type="button" class="btn btn-link">Galería</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
+    </div>
 
+    <main style="text-align: center;">
+
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="imagenes/Publicidad1.png" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/Publicidad2.webp" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+              <div class="carousel-item">
+                <img src="imagenes/Publicidad3.jpg" class="d-block w-100" height="300px" alt="No Encontrado">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+
+        <div class="container bg-primary text-white p-4 mt-2">
+            Acerca De
+        </div>
+
+        <div class="container text-center pt-2">
+            <div class="row row-cols-2 row-cols-lg-2 g-2 g-lg-2" style="justify-content: center;">
+              <div class="col" style="width: 35%;">
+                <div class="card">
+                    <img src="imagenes/Noticia1.jpg" class="card-img-top" alt="No Encontrado" height="240">
+                </div>
+              </div>
+              <div class="col">
+                <div class="card"> 
+                    <div class="card-body" style="height: 0%;">
+                        <p class="card-text">¿Nuestro futuro son los electrodomésticos con baterías?</p>
+                        <p class="card-text">Los electrodomésticos con pilas incorporadas están diseñados para seguir funcionando cuando se va la luz. Algunos investigadores creen que también podrían mejorar la red eléctrica.</p>
+                        <p class="card-text"><a href="https://www.latercera.com/pulso-pm/noticia/nuestro-futuro-son-los-electrodomesticos-con-baterias/MIHY4TSLP5DBRF4RKRWVUJ27NI/#" target="_blank">Link</a></p>
+                    </div>
+                </div>
+              </div>
+              <div class="col" style="width: 35%;">
+                <div class="card">
+                    <img src="imagenes/Noticia2.webp" class="card-img-top" alt="No Encontrado" height="240">
+                </div>
+              </div>
+              <div class="col">
+                <div class="card"> 
+                    <div class="card-body" style="height: 0%;">
+                        <p class="card-text">Conoce los electrodomésticos que consumen más energía eléctrica</p>
+                        <p class="card-text">Algunos de los electrodomésticos que se utilizan a diario en los hogares del país como la refrigeradora y la lavadora son los responsables del mayor porcentaje de consumo.</p>
+                        <p class="card-text"><a href="https://www.lahora.com.ec/tungurahua/conoce-electrodomesticos-consumen-mas-energia-electrica/" target="_blank">Link</a></p>
+                    </div>
+                </div>
+              </div>
+              <div class="col" style="width: 35%;">
+                <div class="card">
+                    <img src="imagenes/Noticia3.jpg" class="card-img-top" alt="No Encontrado" height="240">
+                </div>
+              </div>
+              <div class="col">
+                <div class="card"> 
+                    <div class="card-body" style="height: 0%;">
+                        <p class="card-text">Cuidado: los electrodomésticos que más consumen energía estando apagados</p>
+                        <p class="card-text">Economizar energía eléctrica en el hogar puede ser una herramienta bastante útil para cuidar las finanzas personales a la hora de pagar las facturas. Y es que el despilfarro puede derivar en que los gastos se incrementen innecesariamente.</p>
+                        <p class="card-text"><a href="https://www.semana.com/tecnologia/articulo/cuidado-los-electrodomesticos-que-mas-consumen-energia-estando-apagados/202430/" target="_blank">Link</a></p>
+                    </div>
+                </div>
+              </div>
+            </div>
+        </div>
 
     </main>
 
