--- a/galeria.html
+++ b/galeria.html
@@ -48,13 +48,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+                <img src="imagenes/Promo1.jpg" class="d-block w-100" height="300px" alt="No Encontrado">
               </div>
               <div class="carousel-item">
-                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+                <img src="imagenes/Promo2.webp" class="d-block w-100" height="300px" alt="No Encontrado">
               </div>
               <div class="carousel-item">
-                <img src="imagenes/Ejemplo.png" class="d-block w-100" height="300px" alt="No Encontrado">
+                <img src="imagenes/Promo3.webp" class="d-block w-100" height="300px" alt="No Encontrado">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -68,14 +68,14 @@
           </div>
 
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-3 g-4 mt-1">
+            <div class="row row-cols-1 row-cols-md-3 g-4 mt-1 mb-3">
                 <div class="col">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">1</h5>
-                      <p class="card-text" align="center">1</p>
+                      <h5 class="card-title" align="center">Lavadora 10kg Hisense</h5>
+                      <p class="card-text" align="center">Precio: $189.990</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto1.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -85,10 +85,10 @@
                 <div class="col">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">2</h5>
-                      <p class="card-text" align="center">2</p>
+                      <h5 class="card-title" align="center">Refrigerador frio directo 205 lt</h5>
+                      <p class="card-text" align="center">Precio: $199.990</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto2.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -98,10 +98,10 @@
                 <div class="col">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">3</h5>
-                      <p class="card-text" align="center">3</p>
+                      <h5 class="card-title" align="center">Aspiradora Th-1415</h5>
+                      <p class="card-text" align="center">Precio: $39.990</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto3.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -111,10 +111,10 @@
                 <div class="col">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">4</h5>
-                      <p class="card-text" align="center">4</p>
+                      <h5 class="card-title" align="center">Secador de pelo 3000w 5 en 1</h5>
+                      <p class="card-text" align="center">Precio: $12.490</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto4.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -124,10 +124,10 @@
                 <div class="col">
                     <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">5</h5>
-                      <p class="card-text" align="center">5</p>
+                      <h5 class="card-title" align="center">Notebook Asus Ryzen 5 / 8GB / 512GB SSD</h5>
+                      <p class="card-text" align="center">Precio: $439.990</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto5.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -137,10 +137,10 @@
                 <div class="col">
                     <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="card-title" align="center">6</h5>
-                      <p class="card-text" align="center">6</p>
+                      <h5 class="card-title" align="center">Smartphone moto g54 5g 256gb negro</h5>
+                      <p class="card-text" align="center">Precio: $169.990</p>
                     </div>
-                    <img src="..." class="card-img-top" alt="No Encontrado">
+                    <img src="imagenes/Producto6.webp" class="card-img-top" alt="No Encontrado">
                     <div>
                         <input style="float: right; margin-right: 10px; margin-bottom: 10px;" type="number" placeholder="0" min="1" max="50" required/>
                         <label style="float: right; margin-right: 10px;">Cantidad: </label>
@@ -151,6 +151,14 @@
         </div>
 
     </main>
+
+    <footer>
+        <div class="container mb-3">
+            <nav class="navbar navbar-expand-lg bg-light" style="justify-content: space-around;">
+                <h4 style="margin-top: 8px;">Asignatura: Programación Front-End</h4>
+            </nav>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
