--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           </div>
 
         <div class="container bg-primary text-white p-4 mt-2">
-            Acerca De
+            Tecnologías Arcadia es una empresa que se dedica a la venta de productos electrodomésticos de calidad y a precios razonables mientras busca otorgarles la mayor comodidad y seguridad al cliente a la hora de comprar en nuestras dependencias, 
+            recompenzando la lealtad y confianza que depositan en nuestra empresa a travez de increibles ofertas cada cierto periodo de tiempo, brindar comodidad y conformidad a nuestros clientes es nuestro mayor orgullo.
         </div>
 
         <div class="container text-center pt-2">
@@ -118,7 +119,24 @@
             </div>
         </div>
 
+        <div class="container">
+            <div class="card mt-3" style="width: 30%; border-radius: 90%; margin-left: 35%;">
+                <img src="imagenes/Alumno.jpeg" class="card-img-top" alt="No Encontrado" style="border-radius: 90%;">
+              </div>
+            <h3>Juan José Donoso Riquelme</h3>
+            <h5>Ingeniería En Informática</h5>
+            <h5>D-IEI-N3-P1-C3</h5>
+        </div>
+
     </main>
+
+    <footer>
+        <div class="container mt-3 mb-3">
+            <nav class="navbar navbar-expand-lg bg-light" style="justify-content: space-around;">
+                <h4 style="margin-top: 8px;">Asignatura: Programación Front-End</h4>
+            </nav>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
