--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
             </button>
           </div>
 
-        <div id="LoginContainer" class="container p-4 mt-2">
+        <div id="LoginContainer" class="container p-4 mt-2 mb-5">
             <form>
                 <div align="center">
                     <h1>INICIAR SESIÓN</h1>
@@ -85,10 +85,15 @@
                   </div>
               </form>
         </div>
-
-        
-
     </main>
+
+    <footer>
+        <div class="container mb-3">
+            <nav class="navbar navbar-expand-lg bg-light" style="justify-content: space-around;">
+                <h4 style="margin-top: 8px;">Asignatura: Programación Front-End</h4>
+            </nav>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
